--- a/scss/sections/_accreditation.scss
+++ b/scss/sections/_accreditation.scss
@@ -37,8 +37,8 @@
         
         #google-box {
             display: flex;
-            width: fit-content;
-            // border: 2px solid purple;
+            justify-content: center;
+            // border: 2px solid blue;
         } 
         #google {
             width: 220px;
